--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "builds": [
     {
       "src": "package.json",
-      "use": "@vercel/ng"
+      "use": "@vercel/node" 
     }
   ],
   "routes": [
